[package]
name = "paptura"
version = "0.1.1"
authors = ["niedzwiedzw <wojciech.brozek@niedzwiedz.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.5"
chrono = {version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
rust_decimal = "1.10.2"
rust_decimal_macros = "1.10.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.17"
thiserror = "1.0.23"
