[package]
name = "paptura"
version = "0.4.1"
authors = ["niedzwiedzwo <wojciech.brozek@niedzwiedz.it>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
chrono = {version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.1", features = ["cargo", "env", "wrap_help", "derive", "unicode"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
rust_decimal = "1.27.0"
rust_decimal_macros = "1.27.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
thiserror = "1.0.38"
